--- a/haskell-generics-persistent.cabal
+++ b/haskell-generics-persistent.cabal
@@ -22,5 +22,7 @@ executable haskell-generics-persistent
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.12 && <4.13
+                     , generics-eot
+                     , persistent
   -- hs-source-dirs:
   default-language:    Haskell2010
