--- a/haskell-generics-persistent.cabal
+++ b/haskell-generics-persistent.cabal
@@ -24,5 +24,7 @@ executable haskell-generics-persistent
   build-depends:       base >=4.12 && <4.13
                      , generics-eot
                      , persistent
+                     , persistent-sqlite
+                     , persistent-template
   -- hs-source-dirs:
   default-language:    Haskell2010
