--- a/haskell-generics-persistent.cabal
+++ b/haskell-generics-persistent.cabal
@@ -22,9 +22,11 @@ executable haskell-generics-persistent
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.12 && <4.13
+                     , esqueleto
                      , generics-eot
                      , persistent
                      , persistent-sqlite
                      , persistent-template
+                     , text
   -- hs-source-dirs:
   default-language:    Haskell2010
