--- a/haskell-generics-persistent.cabal
+++ b/haskell-generics-persistent.cabal
@@ -22,6 +22,7 @@ executable haskell-generics-persistent
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.12 && <4.13
+                     , containers
                      , esqueleto
                      , generics-eot
                      , persistent
