--- a/persistent-generic-filter.cabal
+++ b/persistent-generic-filter.cabal
@@ -10,6 +10,8 @@ extra-source-files:  CHANGELOG.md
 
 executable persistent-generic-filter
   main-is:             Main.hs
+  hs-source-dirs:      lib
+  other-modules:       FilterQueryLib
   build-depends:       base >=4.12 && <4.13
                      , containers
                      , esqueleto
